# clickhouse-sqlalchemy

./: .buildinfo  .gitignore  CHANGELOG.md  README.rst  changelog.html  connection.html  contributing.html  development.html  features.html  genindex.html  index.html  installation.html  license.html  migrations.html  objects.inv  prek.toml  pyproject.toml  quickstart.html  search.html  searchindex.js  setup.cfg  setup.py  types.html
.github/workflows/: actions.yml  docs.yml  pages.yml  sa-versions.yml
_sources/: license.rst.txt  quickstart.rst.txt  types.rst.txt
_static/: alabaster.css
clickhouse_sqlalchemy/alembic/: comparators.py  dialect.py  renderers.py
clickhouse_sqlalchemy/drivers/: base.py  util.py
clickhouse_sqlalchemy/drivers/asynch/: base.py  connector.py
clickhouse_sqlalchemy/drivers/compilers/: sqlcompiler.py  typecompiler.py
clickhouse_sqlalchemy/drivers/http/: base.py
clickhouse_sqlalchemy/drivers/native/: base.py
clickhouse_sqlalchemy/types/: __init__.py  common.py  nested.py
docs/: conf.py  development.rst  installation.rst  migrations.rst
tests/: config.py  session.py  test_reflection.py  testcase.py
tests/alembic/: _helpers.py  test_autogenerate.py  test_default_schema_comparators.py  test_materialized_views.py  test_render_create_table.py  test_render_types.py
tests/drivers/: test_asynch_soft_close.py  test_complex_types.py  test_transaction_semantics.py  test_util.py
tests/drivers/asynch/: _core_query_helpers.py  test_application_workload_compat.py  test_connector_params.py  test_core_conditional_aggregates.py  test_core_custom_types.py  test_core_datetime_roundtrip.py  test_core_filter_queries.py  test_core_insert_paths.py  test_core_interval_rows.py  test_core_replacing_mergetree.py  test_core_scalar_roundtrip.py  test_core_state_queries.py  test_core_statement_paths.py  test_datetime64_precision.py  test_join_use_nulls.py
tests/types/: test_decimal_variants.py  test_fixedstring.py  test_interval.py  test_nested.py  test_nothing.py  test_null.py
workbooks/plans/: nested-complex-types-tdd-plan.md
