[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "clickhouse-sqlalchemy"
version = "0.3.2"
description = "Simple ClickHouse SQLAlchemy Dialect"
readme = "README.rst"
requires-python = ">=3.9,<4"
license = {text = "MIT"}
authors = [
    {name = "Konstantin Lebedev", email = "kostyan.lebedev@gmail.com"},
]
maintainers = [
    {name = "Leechael"},
]
keywords = ["ClickHouse", "db", "database", "cloud", "analytics"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: SQL",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
dependencies = [
    "SQLAlchemy>=2.0.0,<2.1.0",
    "requests",
    "clickhouse-driver>=0.1.2",
    "asynch @ git+https://github.com/Leechael/asynch.git@1a74a71",
]

[project.urls]
Documentation = "https://clickhouse-sqlalchemy.readthedocs.io"
Changes = "https://github.com/Leechael/clickhouse-sqlalchemy/blob/master/CHANGELOG.md"
Repository = "https://github.com/Leechael/clickhouse-sqlalchemy"
Upstream = "https://github.com/xzkostyan/clickhouse-sqlalchemy"

[project.entry-points."sqlalchemy.dialects"]
clickhouse = "clickhouse_sqlalchemy.drivers.http.base:ClickHouseDialect_http"
"clickhouse.http" = "clickhouse_sqlalchemy.drivers.http.base:ClickHouseDialect_http"
"clickhouse.native" = "clickhouse_sqlalchemy.drivers.native.base:ClickHouseDialect_native"
"clickhouse.asynch" = "clickhouse_sqlalchemy.drivers.asynch.base:ClickHouseDialect_asynch"

[tool.pdm]
distribution = true

[tool.pdm.build]
includes = ["clickhouse_sqlalchemy"]
excludes = [
    ".pdm-build",
    "dist",
    "docs/_build",
]
source-includes = [
    "CHANGELOG.md",
    "CONTRIBUTING.rst",
    "LICENSE",
    "README.rst",
    "docs",
    "tests",
]

[tool.pdm.dev-dependencies]
test = [
    "pytest",
    "pytest-asyncio",
    "greenlet>=2.0.1",
    "alembic",
    "responses",
    "parameterized",
    "pytest-timeout",
]
lint = [
    "flake8",
    "flake8-print",
    "prek",
]
coverage = [
    "coverage",
    "coveralls<3.0.0",
]
docs = [
    "sphinx",
]

[tool.pdm.scripts]
test = "pytest -q"
test-alembic = "pytest tests/alembic -q"
fmt = "prek run trailing-whitespace end-of-file-fixer mixed-line-ending --all-files"
lint = "flake8 clickhouse_sqlalchemy tests/alembic tests/config.py tests/session.py tests/testcase.py"
prek = "prek"
prek-all = "prek run --all-files"
docs = "make -C docs html"
coverage = "coverage run --source=clickhouse_sqlalchemy -m pytest -q"

[tool.pytest.ini_options]
asyncio_mode = "strict"
